# cosh

./: .gitignore  CLAUDE.md  Cargo.toml  Changes  HASHER.md  HASHING.md  LICENCE  Makefile  README.md  debug_rpsl.ch  original_rpsl.ch  rpsl_single_object.txt  rpsl_tests.rs  test content  test.ch  test_input_with_blank.txt  test_input_without_blank.txt  test_original_rpsl.ch  test_rpsl.ch  test_rpsl_issue.ch  test_script.ch  test_simple.ch  test_without_trailing_blank.txt  testfile.txt
.github/: copilot-instructions.md
.github/workflows/: build.yml  claude.yml
bm/programs/: file-copy.ch  file-copy.pl  file-load-iterate-for.ch  file-load-iterate-for.pl  file-load-iterate-with-fh-and-f.ch  file-load-iterate-with-fh-and-f.pl  file-load-iterate-with-fh-and-fp.ch  file-load-iterate-with-fh.ch  file-load-iterate-with-fh.pl  file-load-iterate.ch  file-load-match.ch  file-load-match.pl  iterate-drop.ch  iterate-drop.pl  num-add.ch  num-add.pl  num-list.ch  num-list.pl  num-subtract.ch  num-subtract.pl  sort.ch  sort.pl  sortp.ch  sortp.pl
bm/results/: 1.json  10.json  11.json  12.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json  gh-11-1.json  gh-11-2.json  gh-11-3.json  gh-11-t2-1.json  gh-11-t2-2.json  gh-11-t2-3.json  gh-11-t2-4.json  gh-11-t2-5.json  gh-11-t2-6.json  gh-11-t2-7.json  gh-11-t2-8.json  gh-11-t2-9.json  gh-14-1.json  perl.json
doc/: all.md  benchmarking.md  nrtm.md  rdap.md  rpkic.md  rpkiv.md  rpsl.md  ssh-agent.md
eg/: fizzbuzz.ch  whois-persistent.ch
lib/: nrtm.ch  rdap.ch  rpkic.ch  rpkiv.ch  rpsl.ch  rt.ch  ssh-agent.ch  util.ch
src/: chunk.rs  compiler.rs  hasher.rs  lib.rs  opcode.rs  rl.rs  vm.rs
src/vm/: vm_arithmetic.rs  vm_basics.rs  vm_command.rs  vm_date.rs  vm_datetime.rs  vm_db.rs  vm_digest.rs  vm_dns.rs  vm_env.rs  vm_hash.rs  vm_http.rs  vm_io.rs  vm_ip.rs  vm_json.rs  vm_list.rs  vm_net.rs  vm_parallel.rs  vm_print.rs  vm_regex.rs  vm_sort.rs  vm_string.rs  vm_system.rs  vm_xml.rs  vm_yaml.rs
test-data/: cert.der  json-bigint  json1  json2  long.json  readlines  s1.ch  split  test.ch  yaml1.yml
test-misc/: ipv4-data  newline.pl  test-default.xml  test.pl  test.xml
tests/: test1.rs  tests.rs
