[package]
name = "cosh"
version = "0.0.1"
authors = ["Tom Harrison <tomh5908@gmail.com>"]

[dependencies]
csv = "1.0.0-beta.5"
getopts = "0.2"
regex = "0.2"
time = "0.1"
assert_cmd = "1.0.1"
tempfile = "3.1.0"
serde = { version = "1.0.107", features = ["derive", "rc"] }
serde_json = "1.0.57"
bincode = "1.0"
rustyline = "6.2.0"
rustyline-derive = "0.3.1"
nix = "0.18.0"
lazy_static = "1.4.0"
indexmap = "1.5.1"
roxmltree = "0.13.0"
xml-rs = "0.8.3"
utime = "0.3.1"
num = "0.3.1"
num-bigint = "0.3.1"
num-traits = "0.2.15"
sysinfo = "0.19.2"
term_size = "0.3.2"
termion = "1.5.2"
ctrlc = "3.2.1"
rand = "0.8.4"
searchpath = "0.1.3"
memchr = "2.0"
dirs-next = "2.0"
chrono = "0.4.20"
chrono-tz = "0.6"
iana-time-zone = "0.1.41"
chronoutil = "0.2.3"
iprange = "0.6.7"
ipnet = "2.5.0"
unicode-segmentation = "1.9.0"
nonblock = "0.2.0"
ansi_term = "0.12.1"
md5 = "0.7.0"
sha1 = "0.10.1"
sha2 = "0.10.2"
atty = "0.2.14"
