[package]
name = "cosh"
version = "0.3.0"
authors = ["Tom Harrison <tomhrr@tomhrr.org>"]
edition = "2021"

[features]
default = []
fnv = ["dep:fnv"]

[dependencies]
assert_cmd = "2.0.9"
csv = "1.0.0-beta.5"
getopts = "0.2"
regex = "0.2"
time = "0.1"
tempfile = "3.1.0"
serde = { version = "1.0.107", features = ["derive", "rc"] }
serde_json = "1.0.57"
serde_yaml = "0.9.34"
bincode = "1.0"
rustyline = "6.2.0"
rustyline-derive = "0.3.1"
nix = { version = "0.28.0", features = ["fs", "process", "user", "signal"] }
lazy_static = "1.4.0"
indexmap = { version = "1.5.1", features = ["serde-1"] }
ahash = "0.8"
fnv = { version = "1.0", optional = true }
roxmltree = "0.13.0"
xml-rs = "0.8.3"
utime = "0.3.1"
num = "0.3.1"
num-bigint = "0.3.1"
num-traits = "0.2.15"
sysinfo = "0.30.7"
term_size = "0.3.2"
termion = "1.5.2"
ctrlc = "3.2.1"
rand = "0.8.4"
searchpath = "0.1.3"
memchr = "2.0"
chrono = { version = "0.4.20", features = [ "serde" ] }
chrono-tz = "0.6"
iana-time-zone = "0.1.41"
chronoutil = "0.2.3"
iprange = { version = "0.6.7", features = [ "serde" ] }
ipnet = { version = "2.5.0", features = [ "serde" ] }
unicode-segmentation = "1.9.0"
nonblock = "0.2.0"
ansi_term = "0.12.1"
md5 = "0.7.0"
sha1 = "0.10.1"
sha2 = "0.10.2"
atty = "0.2.14"
sqlx = { version = "0.5", features = [ "runtime-async-std-native-tls", "mysql", "chrono", "bit-vec", "decimal", "postgres", "sqlite", "ipnetwork", "json", "mac_address", "uuid" ] }
rust_decimal = "1.29.1"
futures = "0.3"
epoll = "4.3.3"
signal-hook = "0.3.17"
dirs = "5.0"
pnet = "0.34.0"
ipnetwork = "0.20.0"
netstat2 = "0.9.1"
reqwest = { version = "0.12.1", features = [ "blocking" ] }
mime = "0.3.17"
http = "1.1.0"
url = "2.5.0"
cpu-time = "1.0.0"
hickory-client = { version = "0.24.1", features = [ "dnssec" ] }
resolv-conf = "0.7.0"
